[package]
name = "day3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
simple_logger = "4.3.0"
common = {path = '../common'}
regex = "1.10.2"
fancy-regex = "0.12.0"
itertools = "0.12.0"
